# cviu-si-dl-study

./: CMakeLists.txt
include/: gaussian_noise_filter.hpp  mesh_sampler.hpp  occlusion_filter.hpp  occupancy_grid.hpp  occupancy_grid_adaptive.hpp  occupancy_grid_fixed.hpp  off_handler.hpp  ply_handler.hpp  render_views_tesselated_sphere.hpp
pointnet/: convert_modelnet.py  pack_dataset.py  pcl_mesh_sampling  read_h5.py  test_samples.txt  training_samples.txt
scripts/: plot_grid.py
src/: fold_generator.cpp  model_sampler.cpp  occupancy_benchmark.cpp  pcd_to_occ.cpp  visualizer.cpp
